<resources>
    <string name="app_name">AFKotlin</string>
    <string name="devKey">4ux8wjmC9qP6qc3UWZ5Ldh</string>
    <string name="mainTitle">AppsFlyer SDK Kotlin Example</string>
    <string name="logIAE">in app event</string>
    <string name="logCrossPromoEvent">cross Promotion</string>
    <string name="conversionEmpty">ConversionData callback has not been called yet</string>
    <string name="deepLinkEmpty">Deep link not detected</string>
    <string name="onConversionDataSuccess">onConversionDataSuccess:\n %1$s</string>
    <string name="onConversionDataFail">onConversionDataFail:\n %1$s</string>
    <string name="onAppOpenAttribution">onAppOpenAttribution:\n %1$s</string>
    <string name="onAttributionFailure">onAttributionFailure:\n %1$s</string>
    <string name="onDeepLinking">onDeepLinking:\n %1$s</string>
    <string name="deepLinkTitle">Deep Linking</string>
    <string name="conversionTitle">Conversion</string>
    <string name="directDeepLinkActivity">You Deep Linked into this activity (Direct link)</string>
    <string name="deferredDeepLinkActivity">You Deep Linked into this activity (Deferred link)</string>
    <string name="apiDemoTitle">API Demo Screen</string>
    <string name="apiDemoButton">API Deme Page</string>
    <string name="dismiss">dismiss</string>
    <string name="openDoc">"Open Documentation "</string>
    <string name="publicKey">public_key_from_Google_Developer_Console</string>
    <string name="logIAEValidate">validate In App Purchase</string>
    <string name="logSession">Log Session</string>
    <string name="optOut">OPT Out</string>
    <string name="optIn">OPT In</string>
    <string name="anonymizeUserEnable">Enable Anonymize User</string>
    <string name="anonymizeUserDisable">Disable Anonymize User</string>
    <string name="showAFid">Show AppsFlyer ID</string>
    <string name="performOnAppAttribution">Perform OnAppAttribution</string>
    <string name="default_notification_channel_id">AppsFlyer_Channel</string>
    <string name="fcm_message">"AF Push "</string>
    <string name="fcm_message_content">AppsFlyer Push Notification Test</string>
    <string name="PushNotificationData">Test Push Notification Data</string>
    <string name="sendPush">"Sent push notification?"</string>
    <string name="send">Send</string>
    <string name="serverKey">key=AAAAN_lV8ss:APA91bGwcUuNeVCuHgAzBwSZhtsyDr8zzJNGaRgMN1anak-5CBtl83jN72iNgUMimPh_PYn0uwZzdp7DKvuB_BZ0-_i7DMht1yv6pvqQ5BH_B9p9_87_2RGdeKGUJKod_yHNHD5BgAnC</string>
    <string name="PushDeepLink">Test Push Deep Link Path</string>
    <string name="afLogo">AppsFLyer Logo</string>
    <string name="afSilentPush">af-uinstall-tracking</string>
    <string name="pushDeepLinkUrl">https://paz-sample.onelink.me/4ln7/d6aee21</string>
    <string name="firebaseApi">https://fcm.googleapis.com/fcm/send?</string>
    <string name="userInvite">User Invite</string>
</resources>